syntax = "proto3";

package proto;
option  optimize_for = CODE_SIZE;
option  go_package = "./;proto";

message ProcessMonitorByDay {
  string day = 1; //
}
